--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -26,6 +24,7 @@
             android:layout_height="wrap_content"
             android:padding="1dip"
             android:layout_weight="0"
+            android:onClick="mapsPressed"
             android:src="@mipmap/gmap_icon"/>
 
         <ImageButton
@@ -50,13 +49,12 @@
 
     </LinearLayout>
 
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.example.maptest.MapsActivity"
-        tools:layout="@android:layout/simple_gallery_item"
+    <TextView
+        android:text="Settings-ToDo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
         android:layout_weight="0" />
+
 
 </LinearLayout>
