--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,24 +10,37 @@
         android:layout_height="wrap_content">
 
         <ImageButton
-            android:id="@+id/info_button"
+            android:contentDescription="@string/desc"
+            android:id="@+id/vehicle_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="1dip"
             android:layout_weight="0"
-            android:onClick="mediaPressed"
-            android:src="@mipmap/info_icon"/>
+            android:src="@mipmap/vehicle_icon"
+            android:onClick="vehiclePressed"/>
 
         <ImageButton
+            android:contentDescription="@string/desc"
+            android:id="@+id/health_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="1dip"
+            android:layout_weight="0"
+            android:src="@mipmap/health_icon"
+            android:onClick="healthPressed"/>
+
+        <ImageButton
+            android:contentDescription="@string/desc"
             android:id="@+id/map_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="1dip"
             android:layout_weight="0"
-            android:onClick="mapsPressed"
-            android:src="@mipmap/gmap_icon"/>
+            android:src="@mipmap/gmap_icon"
+            android:onClick="mapsPressed"/>
 
         <ImageButton
+            android:contentDescription="@string/desc"
             android:text="@string/media_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -38,23 +51,30 @@
             android:src="@mipmap/media_icon"/>
 
         <ImageButton
+            android:contentDescription="@string/desc"
+            android:id="@+id/info_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="1dip"
+            android:layout_weight="0"
+            android:onClick="infoPressed"
+            android:src="@mipmap/info_icon"/>
+
+        <ImageButton
+            android:contentDescription="@string/desc"
             android:text="@string/settings_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="1dip"
             android:id="@+id/settings_button"
             android:layout_weight="0"
-            android:onClick="settingsPressed"
             android:src="@mipmap/settings_icon"/>
 
     </LinearLayout>
 
     <TextView
         android:text="Settings-ToDo"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView2"
-        android:layout_weight="0" />
-
-
+        android:id="@+id/textView" />
 </LinearLayout>
