--- a/app/src/main/res/layout/activity_vehicle.xml
+++ b/app/src/main/res/layout/activity_vehicle.xml
@@ -16,8 +16,7 @@
             android:layout_height="wrap_content"
             android:padding="1dip"
             android:layout_weight="0"
-            android:src="@mipmap/vehicle_icon"
-            android:onClick="vehiclePressed"/>
+            android:src="@mipmap/vehicle_icon"/>
 
         <ImageButton
             android:contentDescription="@string/desc"
@@ -57,6 +56,7 @@
             android:layout_height="wrap_content"
             android:padding="1dip"
             android:layout_weight="0"
+            android:onClick="infoPressed"
             android:src="@mipmap/info_icon"/>
 
         <ImageButton
@@ -73,7 +73,7 @@
     </LinearLayout>
 
     <TextView
-        android:text="Info-ToDo"
+        android:text="Vehicle-ToDo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView" />
