--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:padding="1dip"
             android:layout_weight="0"
-            android:src="@mipmap/vehicle_icon"
+            android:src="@drawable/ic_vehicle"
             android:onClick="vehiclePressed"/>
 
         <ImageButton
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:padding="1dip"
             android:layout_weight="0"
-            android:src="@mipmap/health_icon"
+            android:src="@drawable/ic_health"
             android:onClick="healthPressed"/>
 
         <ImageButton
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:padding="1dip"
             android:layout_weight="0"
-            android:src="@mipmap/gmap_icon"/>
+            android:src="@drawable/ic_map"/>
 
         <ImageButton
             android:contentDescription="@string/desc"
@@ -48,7 +48,7 @@
             android:id="@+id/media_button"
             android:layout_weight="0"
             android:onClick="mediaPressed"
-            android:src="@mipmap/media_icon"/>
+            android:src="@drawable/ic_media"/>
 
         <ImageButton
             android:contentDescription="@string/desc"
@@ -58,7 +58,7 @@
             android:padding="1dip"
             android:layout_weight="0"
             android:onClick="infoPressed"
-            android:src="@mipmap/info_icon"/>
+            android:src="@drawable/ic_info"/>
 
         <ImageButton
             android:contentDescription="@string/desc"
@@ -69,7 +69,7 @@
             android:id="@+id/settings_button"
             android:layout_weight="0"
             android:onClick="settingsPressed"
-            android:src="@mipmap/settings_icon"/>
+            android:src="@drawable/ic_settings"/>
 
     </LinearLayout>
 
