--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:padding="1dip"
             android:layout_weight="0"
-            android:src="@mipmap/vehicle_icon"
+            android:src="@drawable/ic_vehicle"
             android:onClick="vehiclePressed"/>
 
         <ImageButton
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:padding="1dip"
             android:layout_weight="0"
-            android:src="@mipmap/health_icon"
+            android:src="@drawable/ic_health"
             android:onClick="healthPressed"/>
 
         <ImageButton
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:padding="1dip"
             android:layout_weight="0"
-            android:src="@mipmap/gmap_icon"
+            android:src="@drawable/ic_map"
             android:onClick="mapsPressed"/>
 
         <ImageButton
@@ -48,7 +48,7 @@
             android:id="@+id/media_button"
             android:layout_weight="0"
             android:onClick="mediaPressed"
-            android:src="@mipmap/media_icon"/>
+            android:src="@drawable/ic_media"/>
 
         <ImageButton
             android:contentDescription="@string/desc"
@@ -58,7 +58,7 @@
             android:padding="1dip"
             android:layout_weight="0"
             android:onClick="infoPressed"
-            android:src="@mipmap/info_icon"/>
+            android:src="@drawable/ic_info"/>
 
         <ImageButton
             android:contentDescription="@string/desc"
@@ -68,7 +68,7 @@
             android:padding="1dip"
             android:id="@+id/settings_button"
             android:layout_weight="0"
-            android:src="@mipmap/settings_icon"/>
+            android:src="@drawable/ic_settings"/>
 
     </LinearLayout>
 
