--- a/wear/src/main/res/layout/rect_activity_main.xml
+++ b/wear/src/main/res/layout/rect_activity_main.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:orientation="vertical"
-    tools:context="com.example.maptest.MainActivity" tools:deviceIds="wear_square">
+    tools:context="com.example.dashboard.MainActivity" tools:deviceIds="wear_square">
 
-    <TextView android:id="@+id/text" android:layout_width="wrap_content"
+    <TextView android:id="@+id/hr_text" android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:text="@string/hello_square" />
 </LinearLayout>
