--- a/wear/src/main/res/layout/round_activity_main.xml
+++ b/wear/src/main/res/layout/round_activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.example.maptest.MainActivity"
+    android:layout_height="match_parent" tools:context="com.example.dashboard.MainActivity"
     tools:deviceIds="wear_round">
 
-    <TextView android:id="@+id/text" android:layout_width="wrap_content"
+    <TextView android:id="@+id/hr_text" android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:layout_centerHorizontal="true"
         android:layout_centerVertical="true" android:text="@string/hello_round" />
 </RelativeLayout>
